--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -16,6 +16,7 @@ lightgbm==3.1.1
 optuna==2.3.0
 matplotlib-venn==0.11.6
 lmfit==1.0.2
+pytorch-lightning==1.2.7
 
 wandb==0.10.12
 jupyterlab_vim==0.13.0
